--- a/src/main/resources/sources/admin/components/page/system/config.html
+++ b/src/main/resources/sources/admin/components/page/system/config.html
@@ -47,11 +47,12 @@
 			</div>
 			<br>
 			<div class="panel">
-				<div class="panel-head"><strong>海口→昌江</strong></div>
+				<div class="panel-head"><strong>昌江→海口</strong></div>
 				<div class="panel-body">
 					<div class="table-responsive">
 						<table class="table">
-							<tbody><tr>
+							<tbody>
+							<tr>
 								<th>
 									星期
 								</th>
@@ -87,7 +88,7 @@
 			</div>
 			<br>
 			<div class="panel">
-				<div class="panel-head"><strong>昌江→海口</strong></div>
+				<div class="panel-head"><strong>海口→昌江</strong></div>
 				<div class="panel-body">
 					<div class="table-responsive">
 						<table class="table">
@@ -126,8 +127,8 @@
 				</div>
 				<div class="panel-foot" style="text-align: right">
 
-							<button class="button" v-on="click:getContext">取消</button>
-							<button class="button bg-green" v-disabled="isValid" v-on="click:putContext" >保存</button>
+					<button class="button" v-on="click:getContext">取消</button>
+					<button class="button bg-green" v-disabled="isValid" v-on="click:putContext" >保存</button>
 				</div>
 			</div>
 			<br>
@@ -137,274 +138,274 @@
 	</div>
 
 
-<!--	<div class="panel admin-panel">
-		<div class="panel-head">
-			<strong>
-				系统配置
-			</strong>
-		</div>
+	<!--	<div class="panel admin-panel">
+            <div class="panel-head">
+                <strong>
+                    系统配置
+                </strong>
+            </div>
 
-		<div class="padding border-bottom">
+            <div class="padding border-bottom">
 
-			<label>
-				提前订座天数：
-				<input type="text" class="input" number v-model="data.config.advance">
-			</label>
+                <label>
+                    提前订座天数：
+                    <input type="text" class="input" number v-model="data.config.advance">
+                </label>
 
-			<label>
-				订座截止时间[海口→昌江]（小时）：
-				<input type="text" class="input" number v-model="data.config.end['昌江']">
-			</label>
+                <label>
+                    订座截止时间[海口→昌江]（小时）：
+                    <input type="text" class="input" number v-model="data.config.end['昌江']">
+                </label>
 
-			<label>
-				订座截止时间[昌江→海口]（小时）：
-				<input type="text" class="input" number v-model="data.config.end['海口']">
-			</label>
+                <label>
+                    订座截止时间[昌江→海口]（小时）：
+                    <input type="text" class="input" number v-model="data.config.end['海口']">
+                </label>
 
-			昌江→海口<br/>
-			周一<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][0].least">
-			</label>
+                昌江→海口<br/>
+                周一<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][0].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][0].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][0].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][0].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][0].maximum">
+                </label>
 
-			昌江→海口<br/>
-			周二<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][1].least">
-			</label>
+                昌江→海口<br/>
+                周二<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][1].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][1].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][1].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][1].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][1].maximum">
+                </label>
 
-			昌江→海口<br/>
-			周三<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][2].least">
-			</label>
+                昌江→海口<br/>
+                周三<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][2].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][2].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][2].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][2].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][2].maximum">
+                </label>
 
-			昌江→海口<br/>
-			周四<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][3].least">
-			</label>
+                昌江→海口<br/>
+                周四<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][3].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][3].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][3].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][3].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][3].maximum">
+                </label>
 
-			昌江→海口<br/>
-			周五<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][4].least">
-			</label>
+                昌江→海口<br/>
+                周五<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][4].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][4].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][4].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][4].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][4].maximum">
+                </label>
 
-			昌江→海口<br/>
-			周六<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][5].least">
-			</label>
+                昌江→海口<br/>
+                周六<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][5].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][5].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][5].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][5].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][5].maximum">
+                </label>
 
-			昌江→海口<br/>
-			周日<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['海口'][6].least">
-			</label>
+                昌江→海口<br/>
+                周日<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['海口'][6].least">
+                </label>
 
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['海口'][6].percentage">
-			</label>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['海口'][6].percentage">
+                </label>
 
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['海口'][6].maximum">
-			</label>
-
-
-
-			海口→昌江<br/>
-			周一<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][0].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][0].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][0].maximum">
-			</label>
-
-			海口→昌江<br/>
-			周二<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][1].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][1].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][1].maximum">
-			</label>
-
-			海口→昌江<br/>
-			周三<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][2].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][2].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][2].maximum">
-			</label>
-
-			海口→昌江<br/>
-			周四<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][3].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][3].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][3].maximum">
-			</label>
-
-			海口→昌江<br/>
-			周五<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][4].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][4].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][4].maximum">
-			</label>
-
-			海口→昌江<br/>
-			周六<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][5].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][5].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][5].maximum">
-			</label>
-
-			海口→昌江<br/>
-			周日<br/>
-			<label>
-				最初开启车辆数量：
-				<input type="text" class="input" number v-model="data.quota['昌江'][6].least">
-			</label>
-
-			<label>
-				开启下一辆上座率：
-				<input type="text" class="input" number v-model="data.quota['昌江'][6].percentage">
-			</label>
-
-			<label>
-				最大开启车辆台数：
-				<input type="text" class="input" number v-model="data.quota['昌江'][6].maximum">
-			</label>
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['海口'][6].maximum">
+                </label>
 
 
 
+                海口→昌江<br/>
+                周一<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][0].least">
+                </label>
 
-		</div>
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][0].percentage">
+                </label>
 
-	</div>-->
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][0].maximum">
+                </label>
+
+                海口→昌江<br/>
+                周二<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][1].least">
+                </label>
+
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][1].percentage">
+                </label>
+
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][1].maximum">
+                </label>
+
+                海口→昌江<br/>
+                周三<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][2].least">
+                </label>
+
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][2].percentage">
+                </label>
+
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][2].maximum">
+                </label>
+
+                海口→昌江<br/>
+                周四<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][3].least">
+                </label>
+
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][3].percentage">
+                </label>
+
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][3].maximum">
+                </label>
+
+                海口→昌江<br/>
+                周五<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][4].least">
+                </label>
+
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][4].percentage">
+                </label>
+
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][4].maximum">
+                </label>
+
+                海口→昌江<br/>
+                周六<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][5].least">
+                </label>
+
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][5].percentage">
+                </label>
+
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][5].maximum">
+                </label>
+
+                海口→昌江<br/>
+                周日<br/>
+                <label>
+                    最初开启车辆数量：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][6].least">
+                </label>
+
+                <label>
+                    开启下一辆上座率：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][6].percentage">
+                </label>
+
+                <label>
+                    最大开启车辆台数：
+                    <input type="text" class="input" number v-model="data.quota['昌江'][6].maximum">
+                </label>
+
+
+
+
+            </div>
+
+        </div>-->
 </div>
