--- a/src/main/resources/sources/front/components/page/config/config.html
+++ b/src/main/resources/sources/front/components/page/config/config.html
@@ -7,7 +7,7 @@
         </header>
         <div class="mui-content mui-scroll-wrapper">
             <div class="mui-scroll">
-                <ul class="mui-table-view mui-list" style="margin-top: 5px;">
+                <ul class="mui-table-view mui-list" style="margin-top: 20px;">
                     <i class=" mui-pull-left iconfont icon-user"></i>
                     <li class="mui-table-view-cell mui-media">
                         <a class="mui-navigate-right" >
@@ -20,7 +20,7 @@
 
                 </ul>
 
-                <ul class="mui-table-view mui-list" style="margin-top: 5px;">
+                <ul class="mui-table-view mui-list" style="margin-top: 25px;">
                     <i class=" mui-pull-left iconfont icon-users"></i>
                     <li class="mui-table-view-cell">
                         <a class="mui-navigate-right" href="#relation">
@@ -34,15 +34,9 @@
                         </a>
                     </li>
 
-                    <i class=" mui-pull-left iconfont icon-car"></i>
+                    <i class=" mui-pull-left iconfont icon-tuangou"></i>
                     <li class="mui-table-view-cell">
                         <a class="mui-navigate-right" href="#approve">合作单位人员审批
-                        </a>
-                    </li>
-                    <i class=" mui-pull-left iconfont icon-bus"></i>
-                    <li class="mui-table-view-cell mui-media">
-                        <a href="#tel" class="mui-navigate-right" >
-                            常用电话
                         </a>
                     </li>
                 </ul>
@@ -65,8 +59,8 @@
                             </div>
                         </a>
                     </li>
-                <!--</ul>-->
-                <!--<ul class="mui-table-view mui-list" style="margin-top: 25px;margin-bottom: 60px;">-->
+                </ul>
+                <ul class="mui-table-view mui-list" style="margin-top: 25px;">
                     <i class=" mui-pull-left iconfont icon-time"></i>
                     <li class="mui-table-view-cell">
                         <a class="mui-navigate-right" href="#history">
@@ -79,8 +73,12 @@
                             帮助文档
                         </a>
                     </li>
-
                 </ul>
+                <div class="mui-content-padded" style="margin-top: 25px;margin-bottom: 60px;">
+                    <button v-on="click:unBind" class="mui-btn mui-btn-block mui-btn-warning" style="padding: 8px;">
+                        解除绑定
+                    </button>
+                </div>
             </div>
         </div>
     </div>
