--- a/src/main/resources/webapp/static/components/page/approve/approvemore/approvemore.html
+++ b/src/main/resources/webapp/static/components/page/approve/approvemore/approvemore.html
@@ -30,7 +30,7 @@
                         </tr>
                         <tr >
                             <td>身份证号：</td>
-                            <td>{{user.mobile}}</td>
+                            <td>{{user.sn}}</td>
 
                         </tr>
                         <tr >
