--- a/src/main/resources/webapp/admin/static/components/page/system/config.html
+++ b/src/main/resources/webapp/admin/static/components/page/system/config.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <br>
-            <div class="panel">
+            <div class="panel" style="display: none">
                 <div class="panel-head"><strong>昌江→海口</strong></div>
                 <div class="panel-body">
                     <div class="table-responsive">
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <br>
-            <div class="panel">
+            <div class="panel" style="display: none">
                 <div class="panel-head"><strong>海口→昌江</strong></div>
                 <div class="panel-body">
                     <div class="table-responsive">
@@ -133,10 +133,7 @@
             </div>
             <br>
         </div>
-
-
     </div>
-
 
     <div class="panel">
         <div class="panel-head"><strong>海口→昌江</strong></div>
@@ -150,7 +147,12 @@
                         <th>
                             配置
                         </th>
-
+                        <th>
+                            初始车辆
+                        </th>
+                        <th>
+                            最大车辆
+                        </th>
                     </tr>
                     <tr v-repeat="v in data.busConfig['昌江']">
                         <td>
@@ -161,10 +163,10 @@
                                 <thead>
                                 <th>车辆名称</th>
                                 <th>路线</th>
-                                <th>发车时间-到达时间</th>
+                                <th>发车-到达</th>
                                 <th>发车序号</th>
                                 <th>入座率要求</th>
-                                <th>启用状态</th>
+                                <th>启用</th>
                                 </thead>
                                 <tbody>
                                 <tr v-repeat="c in v.buss">
@@ -191,7 +193,10 @@
                                 </tbody>
                             </table>
                         </td>
+                        <td><input type="number" number style="width: 100px" v-model="v.min"></td>
+                        <td><input type="number" number style="width: 100px" v-model="v.max"></td>
                     </tr>
+
                     </tbody></table>
             </div>
 
@@ -217,7 +222,12 @@
                         <th>
                             配置
                         </th>
-
+                        <th >
+                            初始车辆
+                        </th>
+                        <th >
+                            最大车辆
+                        </th>
                     </tr>
                     <tr v-repeat="v in data.busConfig['海口']">
                         <td>
@@ -228,10 +238,10 @@
                                 <thead>
                                 <th>车辆名称</th>
                                 <th>路线</th>
-                                <th>发车时间-到达时间</th>
+                                <th>发车-到达</th>
                                 <th>发车序号</th>
                                 <th>入座率要求</th>
-                                <th>启用状态</th>
+                                <th>启用</th>
                                 </thead>
                                 <tbody>
                                 <tr v-repeat="c in v.buss">
@@ -253,10 +263,15 @@
                                     <td>
                                         <input type="checkbox"  v-model="c.usable" >
                                     </td>
+
                                 </tr>
                                 </tbody>
                             </table>
+                        <td><input type="number"  style="width: 100px" number v-model="v.min"></td>
+                        <td><input type="number"  style="width: 100px" number v-model="v.max"></td>
                         </td>
+
+
                     </tr>
                     </tbody></table>
             </div>
