--- a/src/main/resources/sources/admin/components/page/bus/bus.html
+++ b/src/main/resources/sources/admin/components/page/bus/bus.html
@@ -57,7 +57,8 @@
                                 <input type="text" class="input" v-model="bus.sn" placeholder="请填写车牌号">
                                 <div v-show="!validation.sn" class="input-help  check-error"><ul><li>必填</li></ul></div>
                             </div>
-                        </div> <div class="form-group">
+                        </div>
+                        <div class="form-group">
                         <div class="label">
                             驾驶员
                         </div>
@@ -66,7 +67,15 @@
 
                         </div>
                     </div>
+                        <div class="form-group">
+                            <div class="label">
+                                驾驶员电话
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="bus.tel" placeholder="请填写驾驶员电话号码">
 
+                            </div>
+                        </div>
                         <div class="form-group">
                             <div class="label">
                                 方向
@@ -152,7 +161,7 @@
                                     + 上传照片
                                     <input size="100" type="file" v-on="change:upLoadImg" accept="image/gif, image/jpeg, image/png" />
                                 </a>
-                                <img v-if="bus.src" v-attr="src:bus.src"  width="128" height="128" class="img-border radius-small" />
+                                <img v-if="bus.src" v-attr="src:bus.src"  width="50" height="50" class="img-border radius-small" />
                             </div>
                         </div>
 
