--- a/src/main/resources/sources/front/components/page/relation/relatives/relatives.html
+++ b/src/main/resources/sources/front/components/page/relation/relatives/relatives.html
@@ -15,8 +15,8 @@
             </div>
             <div class="mui-input-group">
                 <div class="mui-input-row">
-                    <label>身份证（后四位）</label>
-                    <input type="text" class="mui-input-clear" v-model="rel.sn" placeholder="请输入身份证">
+                    <label>身份证</label>
+                    <input type="text" class="mui-input-clear" v-model="rel.sn" placeholder="请输入身份证后四位">
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
             </div>
 
         </div>
-        <h5 class="mui-content-padded mui-text-center">如为合作单位请填写单位名称</h5>
+        <!--<h5 class="mui-content-padded mui-text-center">如为合作单位请填写单位名称</h5>-->
         <div style="padding: 15px;">
             <a  style="padding: 5px" class="mui-btn mui-btn-primary mui-btn-block" v-on="click:addRel">
                 <span class="mui-icon mui-icon-plus"></span>
