--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -19,12 +19,13 @@
         <div class="mui-scroll" >
             <div class="bus-header">
                 <img class="bus-driver" src="/static/images/bus-driver.png">
-                驾驶员：{{bus.jsy}}
+
                 <a class="void"></a> 可选
                 <a class="order"></a> 已选
 
                 <span class="bus-door">前门</span>
             </div>
+            <div bus-header> 驾驶员：{{bus.jsy}}（{{bus.tel}}）</div>
             <table class="bus-body">
                 <tr v-repeat="r in bus.rows">
                     <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="click:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
